Fix typo in formatting function signature

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <label for="">Highlight row color (CSS hex value or color name)</label><br>
 
     <br><label for="">Cell formatting function (JavaScript)</label><br>
-    <textarea id="cell-formatting-function">function(content, line, rowIndex, content, colIndex) {
+    <textarea id="cell-formatting-function">function(content, line, rowIndex, colIndex) {
     // Do stuff to manipulate cell content here.
     return content;
 }</textarea>
